2001-05-03 07:30 UTC-0800 Ron Pinkas <ron@profit-master.com>
   * source/pp/ppcore.c
     + Added missing valid string prefix (|) in getExpReal()

2001-05-02 21:20 UTC-0800 Ron Pinkas <ron@profit-master.com>
   * source/pp/ppcore.c
     ! Corrected bug in getExpReal() where strings could be appended to an invalid expression.

2001-05-02 15:00 UTC-0400 David G. Holm <dholm@jsd-llc.com>

  * include/hbapigt.h
    % Corrected parameter declarations for hb_gt_ExtendedKeySupport()
      to be void instead of implied int.

2001-05-02 11:05 UTC-0800 Ron Pinkas <ron@profit-master.com>
   * include/hbapi.h
     * Changed HB_NESTED_CLONED to record BaseArray instead of first item.
     * Reverted declaration of hb_arrayClone to use 2nd parameter ( pClonedList ) for futute Thread Safety.

   * source/vm/arrays.c
     * Corrected handling of nested (shared) empty array in hb_arrayClone().
     * Reverted definition of hb_arrayClone() to use 2nd parameter ( pClonedList ) for future Thread Safety.

   * source/vm/arrayshb.c
   * source/vm/classes.c
   * source/vm/hvm.c
     * Added required 2nd parameter ( NULL ) to calls to hb_arrayClone()

2001-05-01 02:35 UTC-0800 Ron Pinkas <ron@profit-master.com>
   * contrib/dot/rp_run.ch
   * contrib/dot/pp.prg
     % Optimozed and improved handling of IF [ELSEIF] [ELSE] ENDIF in Interpreter mode.
     % Optimozed and improved handling of DO CASE [CASE] [OTHERWISE] END[CASE] in Interpreter mode.
     + Added support for FOR [LOOP] [EXIT] NEXT to Interpreter mode.
     + Added support for [DO] WHILE [LOOP] [EXIT] END[DO] to Interpreter mode.
     + Added support for file statics to Interpreter mode.
     + Added supprt for Command-Line Parameters to Interpreter mode.
       /* PP "FileName Param1 ParamN" -r */

   * tests/stripem.prg
     ! Resolved missing Default() and ToChar()

2001-04-30 13:00 UTC-0400 David G. Holm <dholm@jsd-llc.com>

  * include/hbinkey.ch
  * source/rtl/inkey.c
  * source/rtl/gtwin/gtwin.c