@@ -1,3 +1,14 @@
+2001-05-03 19:35 UTC+0100 Ryszard Glab <rglab@imid.med.pl>
+
+    *source/compiler/harbour.l
+        *fixed support for macro expressions 
+        
+    *tests/keywords.prg
+        *added some code to test compilation of macro expressions
+        *added HB_CLIPPER_COMPATIBLE to correctly report errors with
+        Harbour(flex)
+
+
 2001-05-03 07:30 UTC-0800 Ron Pinkas <ron@profit-master.com>
    * source/pp/ppcore.c
      + Added missing valid string prefix (|) in getExpReal()
